# Slideshow

./: CMakeLists.txt  Observer.h  README.md  Subject.h  main.cpp
GUI/Slideshow/: DotsContainer.cpp  DotsContainer.h  ImagePath.cpp  ImagePath.h  ImageView.cpp  ImageView.h  Playlist.h  Slideshow.cpp  Slideshow.h  Slideshow.pro  Slideshow.ui  SlideshowTimer.h  Utils.h  dotscontainer.cpp  dotscontainer.h  slideshow.cpp  slideshow.h  slideshow.qrc  slideshow.ui
test/: CMakeLists.txt  TestSlideshow.h  runSlideshowTests.cpp
